5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4006/executions/1573_1330.log
== TEST (2019-03-11 15:12:39) 
-- CODE:
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:12:45) 
-- CODE:
print(250/6)
-- EXECUTION TIME:
0.142044
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:12:50) 
-- CODE:
print(250/6)
-- EXECUTION TIME:
0.17283
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:12:53) 
-- CODE:
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:13:44) 
-- CODE:
print(250/6) round(41,6666666666)
-- ERROR:
File "XXXX", line 1
    print(250/6) round(41,6666666666)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:15:05) 
-- CODE:
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:16:43) 
-- CODE:
print(250/6) 
round(41,10)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:16:48) 
-- CODE:
print(250/6) 
round(41,10)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:17:02) 
-- CODE:
print(250/6) 
round(41,6666666666)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:19:25) 
-- CODE:
round(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:20:17) 
-- CODE:
print(250/6 round(x,10))
-- ERROR:
File "XXXX", line 1
    print(250/6 round(x,10))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:20:25) 
-- CODE:
print(250/6 round(x,10))
-- ERROR:
File "XXXX", line 1
    print(250/6 round(x,10))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:20:41) 
-- CODE:
print(250/6)

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:22:39) 
-- CODE:
print(250/6 round)
-- ERROR:
File "XXXX", line 1
    print(250/6 round)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:22:56) 
-- CODE:
print(250/6 round 41,5)
-- ERROR:
File "XXXX", line 1
    print(250/6 round 41,5)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:23:46) 
-- CODE:
print(round(250/6,2)
-- ERROR:
File "XXXX", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:23:50) 
-- CODE:
print(round(250/6,2)
-- ERROR:
File "XXXX", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:24:00) 
-- CODE:
print(round(250/6,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:24:26) 
-- CODE:
print(round(250/6,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:24:38) 
-- CODE:
print(round(250/6,2))
-- EXECUTION TIME:
0.126284
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
